@@ -1,3 +1,4 @@
+* [Bug 1042] multicast listeners IPv4+6 ignore new interfaces
 (4.2.5p182) 2009/06/18 Released by Harlan Stenn <stenn@ntp.org>
 * Add missing header dependencies to the ntpdc layout verification.
 * prefer.html updates from Dave Mills.
